--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">EVA</h2>
+    	<h2 style="color:#F2B300;">E</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">NIASI</h2>
+    	<h2 style="color:#0719D4;">V</h2>
+    </div>
+	<div class="balloons text-center" id="b3">
+    	<h2 style="color:#D14D39;">A</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
