--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     	<h2 style="color:#D14D39;">D</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">E</h2>
+    	<h2 style="color:#8FAD00;">V</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">V</h2>
+    	<h2 style="color:#8377E4;">I</h2>
     </div>
     <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;">A</h2>
@@ -101,16 +101,11 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Hari ini Adalah</p>
-				<p>Hari Ulang Tahun Mu</p>
-				<p>Semoga</p>
-				<p>Tercapai</p>
-				<p>Segala Yang</p>
-				<p><strong>di inginkan</strong></p>
-				<p>Kamu Tau?</p>
-				<p>Mnurutku, ini adalah hari yang sangat istimewa</p>
-				<p>Selamat Panjang Umur</p>
-				<p>From Zaky To You</p>
+				<p>Happy Birthday Via</p>
+				<p>Semoga Menjadi Pribadi yang baik</p>
+				<p>Selalu Sayang Orang tua</p>
+				<p>Dan Tercapai Semua Keinginan</p>
+				<p>Amiiiin</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
